fix rcpch_multiple_toggle buttons on viewing all cases overflowing container

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1451,3 +1451,14 @@ div.rcpch_summary_stats>div.rcpch_summary_stats_row {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.multiple_toggle_buttons_wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.multiple_toggle_buttons_wrapper .rcpch_dark_blue.button {
+    flex-grow: 1;
+}
